Principled Volume's Absorption Color input produces different results in 3.0 (Cycles) #92876

Closed
opened 2021-11-06 13:55:04 +01:00 by 996EYES · 12 comments

System Information
Operating system: Windows-10-10.0.17763-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.39

Blender Version
Broken: version: 3.0.0 Beta, branch: master, commit date: 2021-11-05 22:17, hash: 7a5b8cb202
Worked: 2.93.5

Short description of error
The Principled Volume node's Absorption Color input produces different results in 3.0.
Found it out after loading my recent project with a bit unconventional volume setup in 3.0, couldn't find a way to achieve the same look as in 2.93.
Doesn't affect Eevee.

Exact steps for others to reproduce the error
See images and .blend.

2.93.5
1.png
3.0 Beta

2.png

VolumeTest.blend

**System Information** Operating system: Windows-10-10.0.17763-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.39 **Blender Version** Broken: version: 3.0.0 Beta, branch: master, commit date: 2021-11-05 22:17, hash: `7a5b8cb202` Worked: 2.93.5 **Short description of error** The Principled Volume node's Absorption Color input produces different results in 3.0. Found it out after loading my recent project with a bit unconventional volume setup in 3.0, couldn't find a way to achieve the same look as in 2.93. Doesn't affect Eevee. **Exact steps for others to reproduce the error** See images and .blend. 2.93.5 ![1.png](https://archive.blender.org/developer/F11750211/1.png) 3.0 Beta ![2.png](https://archive.blender.org/developer/F11750216/2.png) [VolumeTest.blend](https://archive.blender.org/developer/F11750313/VolumeTest.blend)
Author

Added subscriber: @996EYES

Added subscriber: @996EYES
996EYES changed title from Principled Volume's Absorption Color input produces different results in 3.0 to Principled Volume's Absorption Color input produces different results in 3.0 (Cycles) 2021-11-06 14:34:37 +01:00
Member

Added subscriber: @EAW

Added subscriber: @EAW
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I can confirm testing with version: 3.1.0 Alpha, branch: master, commit date: 2021-11-05 22:22, hash: a804a11db1, type: Release
build date: 2021-11-05, 22:53:59
platform: 'Windows-10-10.0.19043-SP0'

Rendering on CPU
OS: Windows-10-10.0.19043.1052-SP0 64 Bits
GPU: GeForce GTX 470/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 391.35
CPU: i7-950 @3.07 GHz

I can confirm testing with version: 3.1.0 Alpha, branch: master, commit date: 2021-11-05 22:22, hash: a804a11db100, type: Release build date: 2021-11-05, 22:53:59 platform: 'Windows-10-10.0.19043-SP0' Rendering on CPU OS: Windows-10-10.0.19043.1052-SP0 64 Bits GPU: GeForce GTX 470/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 391.35 CPU: i7-950 @3.07 GHz
Contributor

Added subscriber: @Raimund58

Added subscriber: @Raimund58
Member

Added subscriber: @leesonw

Added subscriber: @leesonw
Member

Raising the priority since this was different in previous blender releases

Raising the priority since this was different in previous blender releases

This issue was referenced by blender/cycles@673c345d58

This issue was referenced by blender/cycles@673c345d5833db311b30f8496bd23c3e10c39d11

This issue was referenced by 6c24cafecc

This issue was referenced by 6c24cafecc9e8353781080ebdc81ae67f9292d3b

This issue was referenced by c56cf50bd0

This issue was referenced by c56cf50bd0b68ccbdba17fe715278f08a9cef7e9
Brecht Van Lommel self-assigned this 2021-11-09 13:08:28 +01:00

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

This issue was referenced by None@62746

This issue was referenced by None@62746
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#92876
No description provided.