Fix T92876: Cycles incorrect volume emission + absorption handling